samples/_failures_safe/1761613817_503636_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_927b9e37.c: In function ‘main’:
./samples/SAFE/__tmp_927b9e37.c:140:5: error: expected declaration or statement at end of input
  140 |     }
      |     ^
